# timeline_creator

./: LICENSE
linha_tempo/: Cargo.toml  go.mod  insere.html  main.go
linha_tempo/linhas_html/: template.html
linha_tempo/linhas_json/: template.json
linha_tempo/src/: main.rs
